--- a/Capitoli/Kotlin.tex
+++ b/Capitoli/Kotlin.tex
@@ -11,6 +11,14 @@ Java fin dalle sue prime versioni, \'e sempre stato uno dei linguaggi  pi\'u usa
 L'idea di utilizzare pattern e idee di linguaggi preesistenti permise agli sviluppatori di introdurre la facilit\'a sintattica, potenzialit\'a e caratteristiche testate a lungo da altri linguaggi, senza dover apportare grosse innovazioni, rendendo quindi il linguaggio leggibile e comprensibile anche da chi non lo conoscesse.\\
 Lo sviluppo di Kotlin si basava principalmente sul miglioraramento di Java, ma dato che anche Android utilizzava la JVM, gli sviluppatori cercarono di adattarlo e renderlo ottimizzato anche per Android.\\
 La comunit\'a di sviluppatori che cominci\'o a utilizzare Kotlin crebbe enormemente, tra il 2016 e il 2017, in solo un anno, le linee di codice scritte in Kotlin su progetti presenti su GitHub quadruplicarono passando da 2.4 milioni a 10 milioni \footnote{https://blog.jetbrains.com/kotlin/2017/03/kotlin-1-1/}. \\
+
+\begin{figure}[!hb]
+  \centering
+  \includegraphics[width=0.8\textwidth]{immagini/kotlin_grafico_incremento.png}
+  \caption{Kotlin incremento.}
+  \label{fig:Kotlin incremento}
+\end{figure}
+
 Nel 2015 Google prese in considerazione l'utilizzo di Kotlin come plugin per Android Studio, e dopo vari test nel 2017 durante la conferenza Google IO ( 2017 ), arriv\'o l'annuncio che ufficializzava \footnote{https://android-developers.googleblog.com/2017/05/android-announces-support-for-kotlin.html} Kotlin come nuovo linguaggio di programmazione per lo sviluppo di applicazioni Android, senza escludere e rinunciare a Java, su cui si basa l'SDK di Android.\\
 Gli stessi sviluppatori Android, dopo aver testato le potenzialit\'a di Kotlin ne rimasero molto soddisfatti per la praticit\'a, la stabilit\'a e i suoi benefici sintattici e funzionali, Kotlin \'e infatti un linguaggio molto coinciso, espessivo, strutturato sulla tipizzazione che mette a disposizione costrutti per evitare errori a puntatori nulli.\\
 Il supporto completo di Kotlin su Android venne raggiunto attraverso una buona integrazione con l'IDE Android Studio 3.0 e un plugin Kotlin per le versioni precedenti delle IDE, qualsiasi progetto che utilizzava Java poteva essere parzialmente o completamente convertito in Kotlin.
@@ -23,7 +31,7 @@ Il supporto completo di Kotlin su Android venne raggiunto attraverso una buona i
 Il linguaggio Kotlin \'e stato sviluppato in ambito aziendale e non accademico, come spesso accade per altri linguaggi, rimanendo in fase beta  per 7 anni, periodo in cui gli stessi programmatori che lavoravano presso JetBrains ne testarono le funzionalit\'a, fino a raggiungere nel 2017 la prima versione stabile: la 1.0. \\
 Kotlin \'e nato quindi all'interno di un team di sviluppatori che dopo anni di esperienza acquisita con Java e altri linguaggi hanno realizzato un linguaggio mirato a risolvere problemi concreti riscontrati dagli stessi sviluppatori.\\
 Prendendo spunto dalle problematiche di Java e da buone regole introdotte da alcuni linguaggi imperativi e funzionali, Kotlin \'e stato modellato in modo tale da aggiungere funzionalit\'a utili sia a livello sintattico che a livello prestazionale, offrendo quindi al programmatore strumenti, caratteristiche e implementazioni semplici e utili ma molto potenti.\\
-Un altro aspetto importante su cui il team di JetBrains ha prestato molta attenzione \'e stata la buona integrazione del suo plugin con Android Studio. Il supporto dato dal plugin \'e tale da supportare il programmatore in ogni momento, proponendo la riscrittura di porzioni di codice per renderlo pi\'u coinciso, allertare il programmatore in caso di possibili puntatori nulli, offrire una conversione automatica del codice Java in Kotlin e ove possibile cercher\'a di allertare lo sviluppatore su possibili errori e problemi di prestazione e sintattici.\\
+Un altro aspetto importante su cui il team di JetBrains ha prestato molta attenzione \'e stata la buona integrazione del suo plugin con Android Studio. Il supporto dato dal plugin \'e tale da supportare il programmatoreFirebase logo in ogni momento, proponendo la riscrittura di porzioni di codice per renderlo pi\'u coinciso, allertare il programmatore in caso di possibili puntatori nulli, offrire una conversione automatica del codice Java in Kotlin e ove possibile cercher\'a di allertare lo sviluppatore su possibili errori e problemi di prestazione e sintattici.\\
 Le caratteristiche pi\'u importanti offerte da Kotlin sono l'interoperabilit\'a con Java, permettendo l'utilizzo di librerie Java e Kotlin simultaneamente, l'introduzione di alcune caratteristiche dei linguaggi di ordine superiore, la tipizzazione statica delle variabili, l'inferenza di tipo e soprattutto il null-safety permettendo di differenziare il tipo nullabile e il tipo non-nullabile, prevenendo quindi errori di null pointer expetions.\\
 Il codice prodotto in Kotlin \`e inoltre pi\'u compatto, coninciso e meno verboso grazie alle dataclass, il supporto delle lambda function e altri costrutti utili.
 
