--- a/Dedica.tex
+++ b/Dedica.tex
@@ -10,9 +10,7 @@
 \large                                  %aumenta la grandezza del carattere
                                         %   a 14pt
 \em                                     %emfatizza (corsivo) il carattere
-Questa \`e la \textsc{Dedica}:\\
-ognuno pu\`o scrivere quello che vuole, \\
-anche nulla \ldots                      %\ldots lascia tre puntini
+A Claudio Maracci \ldots                      %\ldots lascia tre puntini
 \newpage                                %va in una pagina nuova
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
