--- a/Ringraziamenti.tex
+++ b/Ringraziamenti.tex
@@ -2,4 +2,4 @@
 
 \chapter*{Ringraziamenti}
 \thispagestyle{empty}
-Ringraziamenti bla bla
+Un ringraziamento speciale alla mia famiglia che mi ha sempre sostenuto.
